tests/rt/neg/ifc/lclear-wrongauth.trp
(* negative test; should fail *)
let val c = raisembox ({alice})
    val () = lowermbox (c, attenuate (authority, {bob}))    
in c
end 